@@ -4,15 +4,15 @@ import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private static final int MAX_HISTORY_SIZE = 10;
-    private final LinkedList<Task> history = new LinkedList<>();
+    private final List<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
         if (task == null) return;
         if (history.size() >= MAX_HISTORY_SIZE) {
-            history.removeFirst();
+            history.remove(0);
         }
-        history.addLast(task);
+        history.add(task);
     }
 
     @Override
